# Bagh-Chal

./: .env.example  .env.production.local.example  .gitignore  AI_IMPLEMENTATION.md  AI_IMPROVEMENTS_SUMMARY.md  Anchor.toml  BACKEND_SETUP_COMPLETE.md  DATASET_DOCUMENTATION.md  DEFENSIVE_AI_FIX.md  ENDGAME_LAG_FIX.md  FIREBASE_SETUP.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_AI.md  UI_BREAKDOWN.md  ai-worker.js  index.html  index.html.bak  main.js  package-lock.json  package.json  style.css  tsconfig.anchor.json  vite.config.js  wrangler.toml
app/: bootstrap.js
app/ai/: BaghchalAI.js  DatasetGenerator.js  aiController.js
app/analytics/: analyticsService.js
app/audio/: audioSystem.js
app/auth/: authService.js
app/challenges/: challengeConfig.js  challengeService.js
app/config/: gameConfig.js
app/game/: adventureConfig.js  boardRules.js  gameController.js  gamePersistence.js  historyService.js  ratingService.js  timerService.js
app/monitoring/: sentry.js
app/multiplayer/: multiplayerBridge.js  multiplayerService.js
backend/: BaghchalAI.js  package-lock.json  package.json  server.js
docs/: MAINNET_BOUNTY_RUNBOOK.md
programs/bot-bounty-escrow/: Cargo.toml
programs/bot-bounty-escrow/src/: lib.rs
scripts/: bounty-ops.mjs  migrate-firebase-to-supabase.mjs  setup-devnet-bounty.mjs
src/: DatasetGenerator.js
supabase/: FIREBASE_AUTH_SETUP.md  SUPABASE_AUTH_SETUP.md  USDC_BOT_BOUNTY_SETUP.md  config.toml  schema.sql  seed.sql
tests/: bot-bounty-escrow.ts
(+43 files in other folders)
