[package]
name = "bot-bounty-escrow"
version = "0.1.0"
description = "Sponsored USDC prize escrow for BaghChal bot bounty challenges"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bot_bounty_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
blake3 = "=1.5.5"
indexmap = "=2.2.6"
borsh = "=1.5.1"
unicode-segmentation = "=1.10.1"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
